// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Div checkGrammar 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkGrammar 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkGrammar 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkGrammar 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkHighlight 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkHighlight 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkHighlight 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkHighlight 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkSpaces 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkSpaces 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkSpaces 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div checkSpaces 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div className 1`] = `
<div
  className="uu5-common-div my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div content 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Div content 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Div content 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Div content 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Div controlled 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div controlled 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div controlled 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div controlled 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div default props 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div disabled 1`] = `
<div
  className="uu5-common-div uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Div disabled 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div disabled 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div disabled 4`] = `
<div
  className="uu5-common-div uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Div dynamic 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div dynamic 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div dynamic 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div dynamic 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div example docKit UU5.Bricks.Div render without crash 1`] = `
<div
  className="uu5-common-div"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is a DIV"
  />
</div>
`;

exports[`UU5.Bricks.Div hidden 1`] = `
<div
  className="uu5-common-div uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div hidden 4`] = `
<div
  className="uu5-common-div uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div id 1`] = `
<div
  className="uu5-common-div"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div ignoreHTML 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div ignoreHTML 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div ignoreHTML 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div ignoreHTML 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div mainAttrs 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div name 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div noIndex 1`] = `
<div
  className="uu5-common-div uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div noIndex 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div noIndex 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div noIndex 4`] = `
<div
  className="uu5-common-div uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div selected 1`] = `
<div
  className="uu5-common-div uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div selected 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div selected 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div selected 4`] = `
<div
  className="uu5-common-div uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div style 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div style 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div style 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div style 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Div textCorrector 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div textCorrector 2`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div textCorrector 3`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div textCorrector 4`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Div tooltip 1`] = `
<div
  className="uu5-common-div"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
